src2/objects/Case_Action_Item__c.object
<CustomObject>
    <fields>
        <fullName>Action_Item_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Item Rule</label>
        <referenceTo>Action_Item_Rule__c</referenceTo>
        <relationshipLabel>Case Action Items</relationshipLabel>
        <relationshipName>Case_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Item</label>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Case Action Items</relationshipLabel>
        <relationshipName>Case_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Action Items</relationshipLabel>
        <relationshipName>Case_Action_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procedure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Action_Item__c.Type__c</field>
                <operation>equals</operation>
                <value>Procedure, Resolution</value>
            </filterItems>
            <filterItems>
                <field>Action_Item__c.Type__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Case Action Items (Procedure)</relationshipLabel>
        <relationshipName>Case_Action_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Duration__c</fullName>
        <formula>ROUND(( Step_Out_On__c - Step_In_On__c )*86400,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step_In_On__c</fullName>
        <label>Step In On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step_Out_On__c</fullName>
        <label>Step Out On</label>
        <type>DateTime</type>
    </fields>
    <label>Case Action Item</label>
    <nameField>
        <label>Case Action Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Action Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>